feat: implement stock movement, audit base entity and flyway migrations